# CFLA

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.dev.txt  setup.py
datasets/: __init__.py  ag_news.py  dataset_utils.py  emnist.py  femnist.py
experiments/: flhc_2_artificial_partition.py  flhc_3_artificial_partition.py  lcfed.py
experiments/scripts/: cgpfl.py  fedgroup.py  fedper.py  fesem.py  flhc.py  hcfl.py  ifca.py  lcfed.py  main.py  run_all_agnews.py  run_all_cifar-10.py  run_all_femnist.py  run_all_mnist.py
framework/client/: __init__.py  client_cgpfl.py  client_fedgroup.py  client_fedper.py  client_fesem.py  client_flhc.py  client_hcfl.py  client_ifca.py  client_lcfed.py  client_madmtop.py  clientbase.py
framework/common/: parameter_tree.py  utils.py
framework/datasets/: dataset_utils.py
framework/models/: computer_vision.py  large_language_models.py  nlp_models.py
framework/server/: __init__.py  server_cgpfl.py  server_fedavg.py  server_fedgroup.py  server_fedper.py  server_fesem.py  server_flhc.py  server_hcfl.py  server_ifca.py  server_madmtop.py  serverbase.py  serveur_lcfed.py
